--- a/css/style.css
+++ b/css/style.css
@@ -353,3 +353,68 @@
   display: inline;
   padding-right: 20px;
 }
+
+.image-project-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /*grid-template-rows: 80px 80px 150px 250px 100px 100px 100px;*/
+  grid-template-rows: repeat (8, 1fr);
+  grid-gap: 10px;
+  padding: 10px;
+  max-width: 1000px; 
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 150px; 
+}
+
+.image-project-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+  border: 5px solid #f17489;
+  transition: border-color 0.3s ease;
+}
+
+.image-project-item img:hover {
+  border-color:#add8e6
+}
+
+.image-project-name-left {
+  font-size: 22px;
+  text-align: left;
+}
+
+.image-project-name-right {
+  font-size: 22px;
+  text-align: right;
+}
+
+.image-project-name {
+  font-size: 22px;
+}
+
+.image-project-description {
+  font-size: 16px;
+} 
+
+.image-project-description-right {
+  font-size: 16px;
+  text-align: right;
+}
+
+.nav-item a {
+  transition: color 0.3s ease;
+}
+
+.item0 { grid-area: 1 / 1 / 2 / 4; }
+.item1 { grid-area: 2 / 1 / 4 / 2; }
+.item1text { grid-area: 2 / 2 / 3 / 3; }
+.item2 { grid-area: 2 / 3 / 4 / 4; }
+.item2text { grid-area: 4 / 3 / 5 / 4; }
+.item3 { grid-area: 4 / 1 / 6 / 2; }
+.item3text { grid-area: 5 / 2 / 6 / 3; }
+.item4 { grid-area: 5 / 3 / 8 / 4; }
+.item4text { grid-area: 6 / 1 / 8 / 3; }
+.item5text { grid-area: 8 / 1 / 9 / 4; }
