--- a/css/style.css
+++ b/css/style.css
@@ -358,14 +358,14 @@
 .image-project-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(8, 1fr);
+  grid-template-rows: repeat(7, 1fr);
   grid-gap: 10px;
   padding: 10px;
   max-width: 1000px; 
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 80px; 
+  /*margin-bottom: 80px; */
 }
 
 .image-project-item img {
@@ -415,9 +415,9 @@
 .item2text { grid-area: 4 / 3 / 5 / 4; }
 .item3 { grid-area: 4 / 1 / 6 / 2; }
 .item3text { grid-area: 5 / 2 / 6 / 3; }
-.item4 { grid-area: 5 / 3 / 8 / 4; }
+.item4 { grid-area: 5 / 3 / 7 / 4; }
 .item4text { grid-area: 6 / 1 / 8 / 3; }
-.item5text { grid-area: 8 / 1 / 9 / 4; }
+/*.item5text { grid-area: 8 / 1 / 9 / 4; }*/
 
 /*Планы*/
 .Plans{
@@ -433,6 +433,12 @@
   margin-bottom: 80px; 
 }
 
+/*.PlansArrow {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}*/
+
 .PlansItem0 { grid-area: 1 / 1 / 2 / 2; }
 .PlansItem1_1 { 
   grid-area: 2 / 1 / 3 / 2;  
@@ -440,8 +446,14 @@
   border-radius: 20px;
   padding: 20px;
 }
-.PlansItem1_2 { grid-area: 2 / 2 / 3 / 3; }
-.PlansItem2_1 { grid-area: 3 / 3 / 4 / 4; }
+.PlansItem1_2 { 
+  grid-area: 2 / 2 / 3 / 3;
+  object-fit: contain;
+ }
+.PlansItem2_1 { 
+  grid-area: 3 / 3 / 4 / 4;
+  object-fit: contain;
+ }
 .PlansItem2_2 { 
   grid-area: 3 / 2 / 4 / 3;  
   border: 5px solid #add8e6;
@@ -483,22 +495,30 @@
 .gallery{
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: 80px;
+  grid-template-rows: 40px 70px 70px 70px;
   grid-gap: 10px;
   padding: 10px;
-  max-width: 10r00px;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 80px; 
+  /*padding-bottom: 80px;*/
 }
 
 .parallelogram {
-  width: 300px;
-  height: 450px;
+  width: 310px;
+  height: 400px;
+  object-fit: contain;
   clip-path: polygon( 0 0%, 100% 20%, 100% 100%, 0 80%);
- 
+  /*display: block;/* убирает нижний отступ у картинки*/
+  border-radius: 20px; /* Закругляем углы */
+  border: 2px solid #add8e6; /* Добавляем рамку */
 }
 
-.galleryItem1{ grid-area: 1 / 1 / 3 / 3; }
-.galleryItem2 { grid-area: 2 / 3 / 4 / 5; }
-.galleryItem3 { grid-area: 3 / 6 / 5 / 7; }
+.galleryItem0{ grid-area: 1 / 1 / 2 / 3; }
+.galleryItem1{ grid-area: 2 / 1 / 4 / 3; }
+.galleryItem2 { grid-area: 3 / 3 / 5 / 5; }
+.galleryItem3 { grid-area: 4 / 5 / 6 / 7; }
+/*.parallelogram:nth-child(3) { grid-area: 3 / 3 / 5 / 5; }
+.parallelogram:nth-child(4) { grid-area: 4 / 4 / 6 / 6; }
+.parallelogram:nth-child(5) { grid-area: 5 / 5 / 7 / 7; }
